# smn_web_delta

collect/: collect_data_time.clt
smn_nginx_config/: Cargo.toml
smn_servers/smn_server_charmline/: Cargo.toml
smn_servers/smn_server_charmline/src/: main.rs
smn_servers/smn_server_get/: Cargo.toml
smn_servers/smn_server_get/clt/: collect_data_time.clt
smn_servers/smn_server_get/config/: projectInfo.json
smn_servers/smn_server_get/src/: main.rs
smn_servers/smn_server_get/src/server/: core.rs  html.rs  mod.rs
smn_servers/smn_server_get/src/storage/: bucket.rs  combined.rs  mod.rs  project_info.rs
smn_servers/smn_server_mora/: Cargo.toml
smn_servers/smn_server_mora/src/: main.rs
smn_servers/smn_server_site/: Cargo.toml
smn_servers/smn_server_site/clt/: collect_data_time.clt
smn_servers/smn_server_site/src/: main.rs  server.rs
smn_servers/smn_server_site/src/plugins/: mod.rs  plugin_static_files.rs
smn_servers/smn_server_site/src/plugins/plugin_helloworld/: mod.rs
smn_servers/smn_server_site/src/structs/: core.rs  file_cache.rs  mod.rs  plugin.rs
tools/: .pids  build_all.py  build_config.json  host_master.py  host_stack.json  nginx_config.json  nginx_host.py  stack_host.py  stack_kill.py  update.py
