[package]
name = "smn_server_get"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-s3 = { version = "0.37", features = ["tokio-rustls-tls"] }
axum = { version = "0.8.7", default-features = false, features = ["tokio", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = "1.0.228"
serde_json = "1.0.145"
